# fsend

./: README.md
fsend-cli/: Cargo.toml
fsend-cli/src/: iroh.rs  main.rs  relay.rs  transfer.rs  webrtc.rs
fsend-relay/: Cargo.toml
fsend-relay/src/: main.rs
fsend-site/: index.html  package.json
fsend-site/src/: App.tsx  config.ts  global.d.ts
fsend-site/src/components/: Button.tsx  Card.tsx  ErrorCard.tsx  FileDropZone.tsx  FileList.tsx  FileOffer.tsx  Layout.tsx  ShareCode.tsx  ThemeToggle.tsx  TransferProgress.tsx
fsend-site/src/lib/: compression.ts  fallbackReceiver.ts  filePicker.ts  fileTree.ts  format.ts  fsAccess.ts  protocol.ts  receiver.ts  relay.ts  sender.ts  stats.ts  types.ts  webrtc.ts
fsend-site/src/pages/: HomePage.tsx  ReceivePage.tsx  SendPage.tsx
fsend-site/src/primitives/: createProgressTracker.ts
